# fasttext-rs

./: .cirrus.yml  .gitmodules  .travis.yml  Cargo.toml  README.md
.github/workflows/: CI.yml
benches/: bench_comparison.rs
cfasttext-sys/: Cargo.toml  build.rs
cfasttext-sys/src/: binding.rs  lib.rs
src/: args.rs  autotune.rs  dictionary.rs  error.rs  fasttext.rs  lib.rs  loss.rs  main.rs  matrix.rs  meter.rs  model.rs  product_quantizer.rs  quant_matrix.rs  simd.rs  utils.rs  vector.rs
src/fasttext/: mod.rs  nn.rs  predict.rs  quantize.rs  train.rs
src/simd/: avx.rs  avx2.rs  avx512.rs  mod.rs  neon.rs  sse2.rs
tests/: cli_tests.rs  cross_area_tests.rs  test_args.rs  test_cpp_parity.rs  test_dictionary.rs  test_fasttest.rs  test_inference.rs  test_model_io.rs  test_quantize.rs  test_training.rs
