[package]
name = "fasttext"
version = "0.7.2"
authors = ["Messense Lv <messense@icloud.com>"]
categories = ["api-bindings", "external-ffi-bindings"]
description = "fastText Rust binding"
edition = "2018"
license = "MIT"
keywords = ["fastText", "text", "classify"]
readme = "README.md"
repository = "https://github.com/messense/fasttext-rs"

[dependencies]
cfasttext-sys = { path = "cfasttext-sys", version = "0.7.1" }

[workspace]
members = [
    ".",
    "cfasttext-sys"
]
