[package]
name = "fasttext"
version = "0.7.8"
authors = ["Messense Lv <messense@icloud.com>"]
categories = ["text-processing", "science"]
description = "fastText pure Rust implementation"
edition = "2018"
license = "MIT"
keywords = ["fastText", "text", "classify"]
readme = "README.md"
repository = "https://github.com/messense/fasttext-rs"

[dependencies]
rayon = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"], optional = true }

[features]
cli = ["clap"]

[[bin]]
name = "fasttext"
path = "src/main.rs"
required-features = ["cli"]
