[package]
name = "cfasttext-sys"
version = "0.5.1"
authors = ["Messense Lv <messense@icloud.com>"]
categories = ["api-bindings", "external-ffi-bindings"]
description = "fastText ffi binding"
edition = "2018"
license = "MIT"
keywords = ["fastText", "text", "classify"]
build = "build.rs"
links = "cfasttext_static"
repository = "https://github.com/messense/fasttext-rs"

[dependencies]

[build-dependencies]
cmake = "0.1"
